[package]
name = "starlight-comet"
version = "1.0.0"
edition = "2021"
description = "Comet is a debugging tool made for the Starlight Operating System"
license = "Apache-2.0"
keywords = ["starlight", "comet", "debugger", "os", "serial"]

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.13", features = ["derive"] }
indicatif = "0.17.8"
serialport = "4.5.0"
shellwords = "1.1.0"

[[bin]]
name = "comet"
path = "src/main.rs"
